// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foo Should render correctly. 1`] = `
<h1>
  Foo, 
  Bohdan
  !
</h1>
`;

exports[`Foo should render correctly in "debug" mode 1`] = `
<h1>
  Foo, 
  name
  !
</h1>
`;
